Adds login and register index, css and js to women wishes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/shoes-store.css" type="text/css">
-        <link rel="stylesheet" href="css/queries.css" type="text/css">
+        <link rel="stylesheet" href="css/style-index-basketDetails.css" type="text/css">
+        <link rel="stylesheet" href="css/queries-index-basketDetails.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
         <script src="javascript/shopping-cart.js"></script>
     </head>
@@ -27,7 +27,7 @@
 
            <div class="div-list2">
              <ul class="ul-list2" id="ulForIcon">
-                    <a href="#" class="top-links"><li class="first-list"> Login | Register</li></a>
+                    <a href="login.html" class="top-links"><li class="first-list"> Login | Register</li></a>
                     <li class="first-list">
                         <a href="#" id="link-cart"><p id="products-cart" onclick="location.href='./basket-details.html';"> 0 </p></a> 
                         <img src="img/shopping-cart.png" class="cart"/>
