Changes link queries and css of basket details

--- a/basket-details.html
+++ b/basket-details.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/shoes-store.css" type="text/css">
-        <link rel="stylesheet" href="css/queries.css" type="text/css">
+        <link rel="stylesheet" href="css/style-index-basketDetails.css" type="text/css">
+        <link rel="stylesheet" href="css/queries-index-basketDetails.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
         
         <script src="javascript/basket-details.js"></script>
