Adds link to login page to basket-details

--- a/basket-details.html
+++ b/basket-details.html
@@ -4,8 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style-index-basketDetails.css" type="text/css">
         <link rel="stylesheet" href="css/queries-index-basketDetails.css" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-        
+        <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet"> 
         <script src="javascript/basket-details.js"></script>
     </head>
 
@@ -30,7 +29,7 @@
            <div class="div-list2">
              <ul class="ul-list2" id="ulForIcon">
                     <li class="first-list"> Search </li>
-                    <a href="#" class="top-links"><li class="first-list"> Login | Register</li></a>
+                    <a href="login.html" class="top-links"><li class="first-list"> Login | Register</li></a>
                     <li class="first-list">  
                         <img src="img/shopping-cart.png" class="cart"/>
                         <p id="products-cart"></p>
