Adds media queries for login form. I need to do just the one for mobiles

--- a/login.html
+++ b/login.html
@@ -1,10 +1,11 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" text="text/css" href="css/style-login.css">
+        <link rel="stylesheet" text="text/css" href="css/queries-login.css">
         <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-        <link href="https://www.paletton.com/#uid=14E0u0kfWsQ6hMib0-EkEnQp5jlrel=" rel="stylesheet">
-
-        <script src="person.js"></script>
+        <link href="https://www.paletton.com/#uid=14E0u0kfWsQ6hMib0-EkEnQp5jlrel=">
+        <script src="javascript/person.js"></script>
         <script src="javascript/login.js"></script>
     </head>
     <body>
@@ -28,11 +29,11 @@
             <input type="submit" value="Sign in" id="button-login">
             <div id="div-login">
                 <div id="div-login-successful">
-                    <img src="icon-successful.png" id="loginSuccessful"/>
+                    <img src="img/icon-successful.png" id="loginSuccessful"/>
                     <p id="message-successfull">Login successfull!</p>
                 </div>
                 <div id="div-login-failed">
-                    <img src="loginFailed.png" id="loginFailed"/>
+                    <img src="img/loginFailed.png" id="loginFailed"/>
                     <p id="message-failed"> Login failed. Please, try again</p>
                 </div>
             </div>
