--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" text="text/css" href="css/style-register.css">
         <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-        <script src="person.js"></script>
+        <script src="javascript/person.js"></script>
         <script src="javascript/register.js"></script>
     </head>
     <body>
