--- a/register.html
+++ b/register.html
@@ -1,6 +1,8 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" text="text/css" href="css/style-register.css">
+        <link rel="stylesheet" text="text/css" href="css/queries-register.css">
         <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
         <script src="javascript/person.js"></script>
         <script src="javascript/register.js"></script>
