Edits css design colors women wishes

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					</div>
 					
 					<div class="div-price">
-						<p class="price" id="price1"> 15£ </p>
+						<p class="price" id="price1"> £15 </p>
 					</div>
 
 					<div class="div-size">
@@ -171,7 +171,7 @@
                         </div>
 
                         <div class="div-price">
-                            <p class="price"> 15£ </p>
+                            <p class="price"> £15 </p>
                         </div>
 
                         <div class="div-size">
@@ -200,7 +200,7 @@
                         </div>
 
                         <div class="div-price">
-                            <p class="price"> 15£ </p>
+                            <p class="price"> £15 </p>
                         </div>
 
                         <div class="div-size">
@@ -258,7 +258,7 @@
                         </div>
 
                         <div class="div-price">
-                            <p class="price"> 15£  </p>
+                            <p class="price"> 15£ </p>
                         </div>
 
                         <div class="div-size">
@@ -329,17 +329,10 @@
                         <div class="div-quantity">
                                 <label for="quantity" class="label-quantity"> Quantity: </label>
                                 <select name="select-quantity" class="options-quantities">
-                                    <!-- <option value="zero" class="options-js"> 1 </option>
-                                    <option value="one" class="options-js"> 3 </option>
-                                    <option value="due" class="options-js"> 5 </option>
-                                    <option value="three" class="options-js"> 7 </option>
-                                    <option value="four" class="options-js"> 8 </option>
-                                    <option value="five" class="options-js"> 9 </option> -->
                                 </select>
                             </div>
                     <button class="button"> <p class="add-to"> ADD TO BASKET </p></button>
                 </div>
-                <!-- <div class="div-product"><img src="C:/Users/Roberta/Desktop/exercises-javascript/final-shopping-cart/img9.jpg" class="img-details"/></div> -->
             </div>
     
 
