Adds message Account Created to register page and prevent refresh. Edits queries and css as well for register css

--- a/register.html
+++ b/register.html
@@ -17,8 +17,18 @@
             <input type="text" name="password" class="input" id="id-pass" placeholder="Password">
             <div id="check-pass"></div>
             <div id="pass-warning"></div>
-            <input type="submit" value="Sign up" id="button">
+            <button type="button" value="Sign up" id="button">Sign up</button>
+            <div id="div-accountCreated">
+                    <img src ="img/icon-successful.png" id="icon-account-created"/>
+                    <p id="messageAccountCreated">Account created</p>
+            </div>
+            <div id="div-accountFailed">
+                    <img src ="img/loginFailed.png" id="icon-account-failed"/>
+                    <p id="messageAccountFailed">Please, fill empty fields</p>
+            </div>
         </form>
+
+      
     </body>
 
 </html>
